--- a/index.html
+++ b/index.html
@@ -19,9 +19,56 @@
 
 <body>
     <header>
-
+        <h1>Influencer products</h1>
     </header>
     <main>
+        <!-- start your journey -->
+        <section class="start-journey flexible">
+            <div class="half-width">
+                <div class="start-journey-head">
+                    <h1>Start your journey as<br>
+                        Influencer
+                    </h1>
+                </div>
+                <div>
+                    <p>Do you want to be a social-media superstar? You can influence millions by showing your talent.
+                        Buy gadgets from our site & start your jorney as an influencer.</p>
+                    <a class="link-button" target="_blank" href="https://www.linkedin.com/in/fazlerabbikhan/">Prebook
+                        now →</a>
+                </div>
+            </div>
+
+            <div class="half-width">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </section>
+
+        <!-- logos -->
+        <section class="logos">
+            <div class="logo">
+                <img src="logos/Alibaba.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Amazon.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Ebay.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Rakuten.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+            <div class="logo">
+                <img src="logos/Target.svg" alt="">
+            </div>
+        </section>
+
+        <!-- popular collection -->
         <section class="popular">
             <div>
                 <h1 class="popular-head">Popular Collection</h1>
@@ -200,6 +247,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- footer -->
+        <footer>
+            <h2>Influencer Products</h2>
+            <p>Copyright ©2022 Influencer Products <br>
+                All rights reserved</p>
+            <div class="social">
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-youtube-square"></i>
+            </div>
+        </footer>
     </main>
 </body>
 
