--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
             </div>
         </section>
 
+        <!-- see more -->
+        <section>
+            <div class="see-more-button">
+                <a class="see-more-button" target="_blank" href="https://www.linkedin.com/in/fazlerabbikhan/">See more
+                    →</a>
+            </div>
+        </section>
+
         <!-- footer -->
         <footer>
             <h2>Influencer Products</h2>
