--- a/index.html
+++ b/index.html
@@ -256,6 +256,18 @@
             </div>
         </section>
 
+        <!-- featured -->
+        <section class="accessories flexible">
+            <div class="less-width">
+                <img src="images/featured.jpg" alt="">
+            </div>
+            <div class="more-width">
+                <h1>Our Accesories</h1>
+                <p>There are some featured products that we are offering right now. You can order from us the
+                    accessories you need for your computer or mobiile phone.</p>
+            </div>
+        </section>
+
         <!-- footer -->
         <footer>
             <h2>Influencer Products</h2>
