--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div>
                     <p>Do you want to be a social-media superstar? You can influence millions by showing your talent.
-                        Buy gadgets from our site & start your jorney as an influencer.</p>
+                        Buy gadgets from our site & start your journey as an influencer.</p>
                     <a class="link-button" target="_blank" href="https://www.linkedin.com/in/fazlerabbikhan/">Prebook
                         now →</a>
                 </div>
@@ -45,25 +45,25 @@
 
         <!-- logos -->
         <section class="logos">
-            <div class="logo">
+            <div>
                 <img src="logos/Alibaba.svg" alt="">
             </div>
-            <div class="logo">
+            <div>
                 <img src="logos/Amazon.svg" alt="">
             </div>
-            <div class="logo">
+            <div>
                 <img src="logos/Daraz.pk Logo.svg" alt="">
             </div>
-            <div class="logo">
+            <div>
                 <img src="logos/Ebay.svg" alt="">
             </div>
-            <div class="logo">
+            <div>
                 <img src="logos/Rakuten.svg" alt="">
             </div>
-            <div class="logo">
+            <div>
                 <img src="logos/Walmart.svg" alt="">
             </div>
-            <div class="logo">
+            <div>
                 <img src="logos/Target.svg" alt="">
             </div>
         </section>
@@ -264,7 +264,7 @@
             <div class="more-width">
                 <h1>Our Accesories</h1>
                 <p>There are some featured products that we are offering right now. You can order from us the
-                    accessories you need for your computer or mobiile phone.</p>
+                    accessories you need for your computer or mobile phone.</p>
             </div>
         </section>
 
