--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
 
 <body>
     <header>
-        <h1>Influencer products</h1>
+        <div class="top">
+            <h1>Influencer products</h1>
+            <span class="top">
+                <ul>Home</ul>
+                <ul>Products</ul>
+                <ul>Sign Up</ul>
+                <ul>Login</ul>
+                <i class="fas fa-search"></i>
+                <i class="fas fa-shopping-cart"></i>
+            </span>
+        </div>
     </header>
     <main>
         <!-- start your journey -->
